--- a/desefios/modulo3/d012/style.css
+++ b/desefios/modulo3/d012/style.css
@@ -3,14 +3,30 @@
     padding: 0;
     box-sizing: border-box;
 }
+@import url('https://fonts.googleapis.com/css2?family=Cormorant:wght@400;500;700&family=Inter:wght@400;500;700&family=Passion+One&family=Permanent+Marker&display=swap');
+
+
+@import url('https://fonts.googleapis.com/css2?family=Cormorant:wght@400;500;700&family=Inter:wght@400;500;700&family=Passion+One&family=Permanent+Marker&family=Sriracha&display=swap');
+
+:root{
+    --font1: Verdana, Geneva, Tahoma, sans-serif; 
+    --font2: 'Passion One', cursive;
+    --font3: 'Sriracha', cursive;
+}
+html, body{
+    font-family: var(--font1);
+    min-height: 100vh;
+}
 header{
     text-align: center;
     background-color: black;
     color: #fff;
 }
 header h1{
+    font-family: var(--font2);
     padding-top: 50px;
     font-variant: small-caps;
+    font-size: 7vw;
 }
 header p{
     padding-bottom: 50px;
@@ -24,21 +40,43 @@ a:hover{
     text-decoration: underline;
 }
 section{
+    font-family: var(--font3);
     padding: 10vh 0vh 10vh 0vh;
     line-height: 2em;
     padding-left: 30px;
+    font-size: 3vw;
+}
+section p{
+    padding-bottom: 2em;
 }
 .div1, .div3, .div5{
     background-color: #fff;
     color: black;
 }
 .div2, .div4{
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.5);
     color: #fff;
     background-color: gray;   
 }
 .div2 p, .div4 p{
-    width: 300px;
-    background-color: rgba(0, 0, 0, 0.250);
+    display: inline-block;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.500);
+    text-shadow: 1px 1px 0px black;
+}
+.div2{
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+.div4{
+    background-image: url(imagens/background002.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
 footer{
     background-color: black;
